--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -536,12 +536,28 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   position: relative;
 }
 
+.ladoEsquerdo .sidebar .menu-item .notificacaoContador{
+  position: absolute;
+  width: 1.2rem;
+  height: 1.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: var(--border-radius);
+  background: var(--color-pastelOrange);
+
+  font-family: 'Raleway Medium', sans-serif;
+  font-size: 0.9rem;
+  right: 0;
+  top: 0;
+}
+
 .ladoEsquerdo .sidebar .menu-item:hover {
   background-color: var(--color-lightGray);
 }
 
 .ladoEsquerdo .sidebar i {
-  font-size: 1.4rem;
+  font-size: 2rem;
   color: var(--color-dark);
   margin-left: 2rem;
   position: relative;
@@ -967,9 +983,9 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
 }
 
 .meio .commentArea textarea {
-  border-top: 1px solid gray;
+  border-top: 1.5px solid #CCCCCC;
   resize: none;
-  width: 37rem;
+  width: 100%;
   height: 59px;
   padding: var(--card-padding);
   padding-left: 2rem;
@@ -1350,7 +1366,8 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
 .criarPostElements {
   display: grid;
   grid-template-rows: repeat(15, 1fr);
-  width: 410px;
+  width: 415px;
+  align-self: flex-end;
 }
 
 
