--- a/assets/css/usuario-style.css
+++ b/assets/css/usuario-style.css
@@ -27,7 +27,7 @@
     content: "";
     width: 100%;
     height: 1px;
-    background: gray;
+    background: #C1C1C1;
     position: absolute;
     bottom: 0;
 
