--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -964,7 +964,7 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   
   overflow-y: auto;
 
-  margin: 0.8rem 0;
+  margin: 0.9rem 0;
 
 }
 
@@ -973,6 +973,17 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   border-radius: 20px;
   padding: 5px 12px;
   cursor: pointer;
+}
+
+.meio .badge-categoria {
+  border: 1px solid var(--color-purple);
+  border-radius: 20px;
+  padding: 5px 12px;
+  cursor: pointer;
+}
+
+.seguida {
+  border-left: 10px solid var(--color-purple) !important;
 }
 
 .meio .commentArea {
