--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -1827,10 +1827,13 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
 }
 
 .denuncia .formDenuncia h5{
-  width: 20rem;
-  text-align: center;
+  width: 21rem;
+  text-align: justify;
 }
 
+.denuncia .formDenuncia h4{
+  color: #cb2d0a;
+}
 
 .toast-denuncia {
   position: absolute;
@@ -2019,10 +2022,10 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
 }
 
 .denuncia{
-  width: 540px !important;
-  height: 325px;
-  margin-top: 16rem;
-  
+  width: 380px !important;
+  height: 405px;
+  margin-top: 14rem;
+
 }
 
   
@@ -2033,10 +2036,10 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
 .denuncia .formDenuncia textarea{
   padding: var(--card-padding);
   font-family: 'Raleway Bold', sans-serif;
-  font-size: 1rem;
+  font-size: 0.9rem;
   resize: none;
   width: 100%;
-  height: 115px;
+  height: 136px;
   border-radius: 10px;
   border: 1px var(--color-gray) solid;
 }
@@ -2047,22 +2050,9 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
 }
 
 
-#formDenunciaUsuario{
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
 
-#formDenunciaUsuario input[type="text"]{
-  width: 100%;
-}
 
-#formDenunciaUsuario input[type="submit"]{
-  background-color: coral;
-  height: 25px;
-  width: 100px;
-  border-radius: 5px;
-}
+
 
 
 
