--- a/assets/css/usuario-style.css
+++ b/assets/css/usuario-style.css
@@ -51,7 +51,7 @@
 
   .meio .infoHolder {
     display: flex;
-    width: 70%;
+    width: 100%;
     gap: 2rem;
   }
 
@@ -75,6 +75,8 @@
 
   .meio .topo{
     align-items: center;
+    justify-content: space-between;
+    position: relative;
   }
 
   .meio .topo .btn{
@@ -84,6 +86,72 @@
     font-weight: 900;
     box-shadow: 0px 5px 15px rgb(0 0 0 / 14%);
   }
+
+
+
+
+
+  .meio .infoHolder  .edit .menuPostHover{
+    transition: opacity .25s ease-in-out;
+    -moz-transition: opacity .25s ease-in-out;
+    -webkit-transition: opacity .25s ease-in-out;
+  
+    background: #464bc9;
+    border-radius: 80px;
+    height: 100%;
+    width: 100%;
+  
+    position: absolute;
+  
+    opacity: 0; 
+    -moz-opacity: 0;
+  }
+
+
+
+  .meio .infoHolder .edit .menupost li a{
+    display: flex;
+    gap: 0.5rem;
+    color: #DB310C;
+    align-items: center;
+  }
+
+  .meio .infoHolder .edit .menupost li i{
+    font-size: 1.5rem;
+  }
+
+  .meio .infoHolder .edit .menuPostHover:hover{
+    opacity: 0.4;
+  }
+
+
+  .meio .infoHolder  .edit {
+    align-self: center;
+  }
+  
+
+  .meio .infoHolder .edit .editButton{
+    position: relative; 
+    height: 2rem;  
+    width: 2rem; 
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .meio .infoHolder .edit  .editButton:hover{
+    color: #464bc9;
+  }
+  
+  .meio .infoHolder .edit .menuPostHover:hover{
+    opacity: 0.4;
+  }
+  
+  .meio .infoHolder  .edit i{
+    font-size: 1.2rem;
+  }
+  
+
 
   /* modal editar perfil */
 
@@ -536,7 +604,7 @@
   color: gray;
 }
 
-.adicionarProduto{}
+
 
 .curtidas .aviso a{
   color: var(--color-purple);
