--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -941,7 +941,7 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   margin: 0 0.6rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.3rem;
 }
 
 .meio .caption :nth-child(1) {
@@ -2056,7 +2056,10 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
 
 
 
-
+#preview-crop-image{
+  width: 100%;
+  height: 100%;
+}
 
 /* MODAL DE POST PROPRIO */
 
@@ -2065,10 +2068,11 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   max-width: 1210px !important;
 }
 
-#preview-crop-image{
+.post .imagemPost{
   width: 60%;
   height: 100%;
 }
+
 
 .rightSidePost{
   display: flex;
