--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -49,7 +49,7 @@
   src: url("../fonts/PublicSans-Bold.ttf");
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;600&display=swap');
 
 
 
@@ -947,6 +947,8 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   display: flex;
   flex-direction: column;
   gap: 0.3rem;
+  position: relative;
+  
 }
 
 .meio .caption :nth-child(1) {
@@ -1780,7 +1782,7 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
 }
 
 .contagemZero {
-  margin-top: 3em;
+  margin-top: 1.3rem;
   display: flex;
   justify-content: center;
   background-color: white;
@@ -2316,4 +2318,23 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   position: absolute;
   top: 0;
   right: 1.9rem;
+}
+
+.svgSemNot{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#spanSemNot{
+  width: 50%;
+  margin-top: 20px;
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+#svgSemNot{
+  width: 350px;
+  
 }
