Seguidores e seguindo back funcionando

--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -2443,3 +2443,13 @@ z-index: 1;
   display: flex;
   flex-direction: column;
 }
+
+.seguidor{
+  display: flex;
+  flex-direction: column;
+  margin: 15;
+}
+
+#fotoSeguidor{
+  width: 100px;
+}
