--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -697,14 +697,29 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
 
 .meio .ads {
   display: flex;
-  justify-content: space-between;
-  height: 12rem;
+  height: 20rem;
   width: 100%;
-  max-width: 39.8rem;
+  max-width: 44rem;
 
-  gap: 0.5rem;
+  gap: 0.8rem;
   overflow-x: auto;
   margin-top: 1rem;
+  padding-bottom: 0.8rem;
+}
+
+.meio .ads::-webkit-scrollbar {
+  height: 10px;
+
+}
+
+.meio .ads::-webkit-scrollbar-track {
+  background-color: #14526945;
+  border-radius: 20px;
+}
+
+.meio .ads::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgba(56, 55, 161, 0.90);
 }
 
 .meio .ads .ad {
@@ -1461,6 +1476,95 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   line-height: 19px;
 }
 
+#checkImp{
+  display: none;
+}
+
+#checkImp + label:before {
+  content: "\e098"; 
+  font: var(--fa-font-solid);
+  cursor: pointer;
+  margin-left: 1rem;
+
+}
+
+
+#checkImp:checked + label:before {
+  content: "\e098"; 
+  font: var(--fa-font-solid);
+  color: var(--color-purple);
+}
+
+
+/* bob hover effect */
+
+@-webkit-keyframes hvr-bob {
+  0% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+  50% {
+    -webkit-transform: translateY(-4px);
+    transform: translateY(-4px);
+  }
+  100% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+}
+@keyframes hvr-bob {
+  0% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+  50% {
+    -webkit-transform: translateY(-4px);
+    transform: translateY(-4px);
+  }
+  100% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+}
+@-webkit-keyframes hvr-bob-float {
+  100% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+}
+@keyframes hvr-bob-float {
+  100% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+}
+
+.hvr-bob {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+.hvr-bob:hover, .hvr-bob:focus, .hvr-bob:active {
+  -webkit-animation-name: hvr-bob-float, hvr-bob;
+  animation-name: hvr-bob-float, hvr-bob;
+  -webkit-animation-duration: .3s, 1.5s;
+  animation-duration: .3s, 1.5s;
+  -webkit-animation-delay: 0s, .3s;
+  animation-delay: 0s, .3s;
+  -webkit-animation-timing-function: ease-out, ease-in-out;
+  animation-timing-function: ease-out, ease-in-out;
+  -webkit-animation-iteration-count: 1, infinite;
+  animation-iteration-count: 1, infinite;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-direction: normal, alternate;
+  animation-direction: normal, alternate;
+}
+
+
+
 .letraCont {
   display: flex;
   width: 95%;
@@ -1542,7 +1646,7 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  padding: 0px 23px 30px 23px;
+  padding: 0px 23px 0px 23px;
   gap: 20px;
 
 }
@@ -1676,7 +1780,7 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   flex-wrap: wrap;
   gap: 0.6rem;
   width: 100%;
-  height: 9rem;
+  height: 10rem;
   overflow-y: auto;
 }
 
@@ -1849,11 +1953,13 @@ z-index: 1;
 }
 
 .contagemChar {
-  right: 0.8rem;
-  bottom: 0.5rem;
+
   display: flex;
-  align-items: flex-start;
-  position: absolute;
+  width: 100%;
+  justify-content:space-between ;
+  padding: var(--card-padding);
+  align-items: center;
+
   cursor: default;
 }
 
